--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 
-<head>
+<head style="height: 100%;">
     <link rel="icon" href="icon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <h1>-</h1>
+    <h1 class="text">-</h1>
+    <h3 class="text">made by beigua87/ryantsui1109 & RobotHanzo</h3>
 </body>
 
 </html>
