--- a/fake.html
+++ b/fake.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="icon.png">
     <title>你被整了哈哈</title>
     <link rel="stylesheet" href="default.css">
 </head>
 
 <body style="background-color: black;">
     <h1 class="center" style="color: brown;">你被整了哈哈</h1>
+    <h3 class="bottom" style="color: black;">其實在fun=no呵呵</h3>
 </body>
 
 </html>
