--- a/fake.html
+++ b/fake.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icon.png">
-    <title>你被整了哈哈</title>
+    <title>某人喜歡宅oo</title>
     <link rel="stylesheet" href="default.css">
 </head>
 
