--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1 class="text center">-</h1>
-    <h3 class="text bottom">made by 806</h3>
+    <h3 class="text bottom">made by ryantsui1109</h3>
 </body>
 
 </html>
