--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>-</title>
-    <link rel="icon" href="icon.png">
-    <link rel="stylesheet" href="default.css">
+    <link rel="shortcut icon" href="../resources/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../default/CSS/default.css">
     <link rel="stylesheet" href="index.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
@@ -14,7 +14,7 @@
 
 <body>
     <h1 class="text center">-</h1>
-    <h3 class="text bottom">made by ryantsui1109</h3>
+    <h3 class="text bottom"></h3>
 </body>
 
 </html>
