--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>-</title>
     <link rel="shortcut icon" href="./resources/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./fonts/default.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="index.css" />
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
@@ -27,7 +32,6 @@
 
   <body>
     <!-- Button trigger modal -->
-    
 
     <!-- Modal -->
     <div
@@ -48,7 +52,7 @@
               aria-label="Close"
             ></button>
           </div>
-          <div class="modal-body">...</div>
+          <div id="messageQueueBody" class="modal-body"></div>
           <div class="modal-footer">
             <button
               type="button"
@@ -57,7 +61,13 @@
             >
               Close
             </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="saveChanges()"
+            >
+              Save changes
+            </button>
           </div>
         </div>
       </div>
