changed the method of text editing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head style="height: 100%">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>-</title>
+    <title>I don't know what to put on title</title>
     <link rel="shortcut icon" href="./resources/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./fonts/default.css" />
     <link
