--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="messageQueueLabel">Modal title</h5>
+            <h5 class="modal-title" id="messageQueueLabel">Edit Text</h5>
             <button
               type="button"
               class="btn-close"
